cluster/manifests/url-shortener/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: url-shortener
  labels:
    name: url-shortener
    pod-security.kubernetes.io/enforce: restricted
