cluster/manifests/url-shortener/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: url-shortener
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: url-shortener
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
