cluster/manifests/url-shortener/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: url-shortener
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - url-shortener.minikube.127.0.0.1.nip.io
        - url-shortener.kaidotio.dev
        - url-shortener-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
