cluster/manifests/url-shortener/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: url-shortener
spec:
  gateways:
    - url-shortener
  hosts:
    - url-shortener.minikube.127.0.0.1.nip.io
    - url-shortener.kaidotio.dev
    - url-shortener-public.kaidotio.dev
  http:
    - route:
        - destination:
            host: url-shortener
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
